css fix - wrap features_container in a row

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -3462,7 +3462,6 @@ html.embed .expand_btn {
 
 .features_container {
   border: none;
-  margin-bottom: 30px;
 }
 
 .latest_videos .section_header,
